force-app/main/default/objects/Contact/fields/Country_code__c.field-meta.xml
<CustomField>
    <fullName>Country_code__c</fullName>
    <label>Country code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States : 1</fullName>
            </value>
            <value>
                <fullName>Canada : 1</fullName>
            </value>
            <value>
                <fullName>Mexico : 52</fullName>
            </value>
            <value>
                <fullName>United Kingdom : 44</fullName>
            </value>
            <value>
                <fullName>Ireland : 353</fullName>
            </value>
            <value>
                <fullName>India : 91</fullName>
            </value>
            <value>
                <fullName>Pakistan : 92</fullName>
            </value>
            <value>
                <fullName>Bangladesh : 880</fullName>
            </value>
            <value>
                <fullName>Sri Lanka : 94</fullName>
            </value>
            <value>
                <fullName>Nepal : 977</fullName>
            </value>
            <value>
                <fullName>Bhutan : 975</fullName>
            </value>
            <value>
                <fullName>Myanmar : 95</fullName>
            </value>
            <value>
                <fullName>United Arab Emirates : 971</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia : 966</fullName>
            </value>
            <value>
                <fullName>Qatar : 974</fullName>
            </value>
            <value>
                <fullName>Oman : 968</fullName>
            </value>
            <value>
                <fullName>Kuwait : 965</fullName>
            </value>
            <value>
                <fullName>Bahrain : 973</fullName>
            </value>
            <value>
                <fullName>Jordan : 962</fullName>
            </value>
            <value>
                <fullName>Lebanon : 961</fullName>
            </value>
            <value>
                <fullName>Israel : 972</fullName>
            </value>
            <value>
                <fullName>Iraq : 964</fullName>
            </value>
            <value>
                <fullName>Iran : 98</fullName>
            </value>
            <value>
                <fullName>Yemen : 967</fullName>
            </value>
            <value>
                <fullName>Australia : 61</fullName>
            </value>
            <value>
                <fullName>New Zealand : 64</fullName>
            </value>
            <value>
                <fullName>China : 86</fullName>
            </value>
            <value>
                <fullName>Japan : 81</fullName>
            </value>
            <value>
                <fullName>South Korea : 82</fullName>
            </value>
            <value>
                <fullName>North Korea : 850</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>