force-app/main/default/objects/Contact/fields/EID_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EID_Expiry_Date__c</fullName>
    <label>EID Expiry Date</label>
    <type>Date</type>
</CustomField>