force-app/main/default/objects/Contact/fields/Emirates_No__c.field-meta.xml
<CustomField>
    <fullName>Emirates_No__c</fullName>
    <label>Emirates ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>