force-app/main/default/objects/Contact/fields/UAE_Visa_File_Number__c.field-meta.xml
<CustomField>
    <fullName>UAE_Visa_File_Number__c</fullName>
    <label>UAE Visa (File Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>