force-app/main/default/objects/Contact/validationRules/Birthdate_should_not_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthdate_should_not_be_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>Birthdate &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Birth date cannot be a future date.</errorMessage>
</ValidationRule>