force-app/main/default/objects/Contact/validationRules/Passport_expiry_date_can_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_expiry_date_can_be_future</fullName>
    <active>true</active>
    <errorConditionFormula>Passport_Expiry_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Passport_Expiry_Date__c</errorDisplayField>
    <errorMessage>Passport Expiry Date cannot be backdate</errorMessage>
</ValidationRule>