force-app/main/default/objects/Contact/validationRules/Passport_Issue_date_cant_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Issue_date_cant_be_future</fullName>
    <active>true</active>
    <errorConditionFormula>Passport_Issue_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Passport_Issue_Date__c</errorDisplayField>
    <errorMessage>Passport Issue Date cannot be a future date.</errorMessage>
</ValidationRule>