force-app/main/default/objects/Contact/validationRules/UAE_Resident_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>UAE_Resident_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(UAE_Resident__c, &quot;Yes&quot;),
    OR(
        ISBLANK( Emirates_No__c ),
        ISBLANK( Passport_Issue_Date__c ),
        ISBLANK( Passport_Expiry_Date__c )
    )
)</errorConditionFormula>
    <errorMessage>For UAE Residents, Emirates ID, Passport Issue Date, and Passport Expiry Date are mandatory.</errorMessage>
</ValidationRule>